--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -101,7 +101,7 @@
         </table>
 
         <div style=" width: 51vw; height: 70vh; overflow-y: auto;">
-            <table class="MeasurementTable DefectTable table table-striped display" id="myTable">
+            <table class="MeasurementTable DefectTable table table-striped display" >
                 <thead>
                     <tr>
                         <th>
@@ -126,6 +126,7 @@
                             <p>Diff</p>
                         </th>
                     </tr>
+                    <tr><th></th></tr>
                 </thead>
                 <tbody>
                     <tr>
@@ -133,6 +134,7 @@
                             <h3>Data Loading.......</h3>
                         </td>
                     </tr>
+                    <tr><td></td></tr>
                 </tbody>
             </table>
         </div>
@@ -194,7 +196,7 @@
 
         $('#myTable').DataTable({
 
-            "pageLength": 10,
+            "pageLength": 1,
             "filter": false,
             "paging": true,
             "scrollY": "49vh",
@@ -232,17 +234,6 @@
     $(".to-edit-detail").dialog({
         width: "70%",
 
-        //dialogClass: "add-contact-box",
-        //buttons: {
-        //    "1": {
-        //        text: 'Next',
-        //        click: function () {
-        //            $(this).dialog("close");
-        //        }
-        //        , "class": "button"
-        //        , "style": "bottom:0;background-color:#E00000"
-        //    },
-        //},
     });
 
     $(".to-edit-detail").on("dialogclose", function (event, ui) {
@@ -292,9 +283,7 @@
                 }
                     });
 
-        $("#myTable tbody").find('tr').each(function (index, value) {
-            $(this).show();
-        });
+
 
         $(".to-edit-detail").dialog("open");
     }
@@ -401,7 +390,7 @@
             if (value.Size == dropSize.value) {
 
                 var readonly = "";
-                var bgColor = "bg-lightyellow";
+                var bgColor = "white";
                 if (!value.CanEdit) {
                     bgColor = "bg-lightgray";
                     readonly = "readonly";
