--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Index.cshtml
@@ -45,30 +45,30 @@
 
         <div class="whiteBackgrond" style="display:flex;flex-wrap:nowrap;height:7vh;align-items:center; vertical-align:middle">
 
-            <table class="center" style="width: 90%;  height: 3vh ">
+            <table class="center" style="width: 100%;  height: 3vh ">
                 <tr>
-                    <td style="width:1%" align="left">
+                    <td style="width:5%" align="right">
                         <p class="searchFont" style="font-size: 18px; font-weight: 900;">SP#</p>
                     </td>
-                    <td style="width:8%" align="left">
+                    <td style="width:4%" align="center">
                         @Html.TextBox("SP", string.Empty, new { style = "border-color:black;" })
                     </td>
-                    <td style="width:1%" align="left">
+                    <td style="width:5%" align="right">
                         <p class="searchFont ">PO#</p>
                     </td>
-                    <td style="width:8%" align="left">
+                    <td style="width:4%" align="center">
                         @Html.TextBox("POID", string.Empty, new { style = "border-color:black;" })
                     </td>
 
-                    <td style="width:1%" align="left">
+                    <td style="width:5%" align="right">
                         <p class="searchFont">Style#</p>
                     </td>
-                    <td style="width:8%" align="left">
+                    <td style="width:4%" align="center">
                         @Html.TextBox("StyleID", string.Empty, new { style = "border-color:black;" })
                     </td>
                     <td style="width: 8%; vertical-align: bottom;" align="right">
 
-                        <button type="submit" style="border: 0; background: transparent;">
+                        <button type="submit" style="border: 0; background: transparent; min-width:3vh">
                             <img src="~/Image/Icon/Query.png" width="40" height="40" alt="submit" />
                         </button>
                     </td>
