--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
@@ -132,8 +132,8 @@
             var list = d[2];
             var sTr = "";
             $(list).each(function (index, value) {
-                sTr = sTr + "<tr><td>" + value[1] + "</td>";
-                sTr = sTr + `<td style='vertical-align: middle'><input type='number'  min="0" style="width: 10vh" id='${value[0]} ' name='${value[0]}'  value='${value[2]}' /></td>
+                sTr = sTr + "<tr><td style='width:70%'>" + value[1] + "</td>";
+                sTr = sTr + `<td style='vertical-align: middle'><input type='number'  min="0" style="width: 6vh" id='${value[0]} ' name='${value[0]}'  value='${value[2]}' /></td>
                             <td> <img src="/Image/Icon/Camera.png" width="25" height="25" /></td>
                             <td> <img src="/Image/Icon/Picture.png" width="25VW" height="25VW" /></td>
                             </tr>`;
