--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
@@ -120,8 +120,8 @@
 
         </table>
         <input type="hidden" id="page" name="page">
-        <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" style="right: 8em;" class="button">Back</button>
-        <button d="btnSubmit" onclick="this.form.submitted=this.value;" type="submit" value="Submit" style="right:0;" class="button">Submit</button>
+        <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" style="right: 7em;" class="button">Back</button>
+        <button d="btnSubmit" onclick="this.form.submitted=this.value;" type="submit" value="Submit" style="right: 0; padding: 12px 25px" class="button">Submit</button>
     }
 </div>
 
