--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab7_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab7_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@model DatabaseObject.ViewModel.FinalInspection.Others
+﻿@*@model DatabaseObject.ViewModel.FinalInspection.Others
 
 <table class="al-m" style="width: 80% ; align-items: center; ">
 
@@ -23,4 +23,4 @@
         </td>
     </tr>
 
-</table>
+</table>*@
