--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
@@ -127,6 +127,8 @@
                     <table cellspacing="100" id="myTable" class="table table-striped display">
                         <thead>
                             <tr class="row-name" id="row-name">
+                                <th>Inspection<br> Report</th>
+                                <th>Inspection Result</th>
                                 <th>SP#</th>
                                 <th>PO#</th>
                                 <th>SP# Qty</th>
@@ -135,8 +137,6 @@
                                 <th>Brand</th>
                                 <th>Inspection <br>Times</th>
                                 <th>Inspection Stage</th>
-                                <th>Inspection Result</th>
-                                <th>Inspection<br> Report</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -201,11 +201,9 @@
             </div>
         </div>
     </div>
-
 </div>
 
 <script type="text/javascript">
-
 
     var msg = new MessagerAlert();
 
@@ -217,6 +215,7 @@
             "filter": false,
             "scrollY": "44vh",
             "scrollCollapse": true,
+            "scrollX": true
 
         });
     });
