--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab5_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab5_Layout.cshtml
@@ -130,6 +130,7 @@
             "paging": true,
             "scrollY": "49vh",
             "scrollCollapse": true,
+            "scrollX": true
 
         });
     });
