--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab7_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab7_Layout.cshtml
@@ -1,26 +1,48 @@
-﻿@*@model DatabaseObject.ViewModel.FinalInspection.Others
+﻿
+@model DatabaseObject.ViewModel.FinalInspection.QueryReport
 
-<table class="al-m" style="width: 80% ; align-items: center; ">
+<style type="text/css">
 
+
+    .Font {
+        font-size: 1.5em;
+        font-weight: 900;
+    }
+
+    td {
+        height: 4em;
+        padding: 1em
+    }
+
+    .ColumnStype {
+        text-align: right;
+    }
+
+    .ColunTD {
+        width: 32%;
+    }
+
+    .ContentText {
+        color: #0000ff
+    }
+</style>
+<table class="al-m" style="width: 80% ;margin-top: 4vh;">
     <tr>
-        <td ><label class="Font">Production Status</label></td>
-        <td> @Html.DisplayFor(o => o.ProductionStatus, new { @class = "form-control center-block" })</td>
+        <td class="ColumnStype ColunTD"><label class="Font">Production Status</label></td>
+        <td class="ContentText"> @Html.DisplayFor(o => o.FinalInspection.ProductionStatus)</td>
     </tr>
-
     <tr>
-
-        <td class="ColumnStype"><label class="Font">Other Photo</label></td>
+        <td class="ColumnStype ColunTD"><label class="Font">Other Photo</label></td>
         <td>
             <img src="~/Image/Icon/Picture.png" width="30" height="30" />
         </td>
     </tr>
-
     <tr>
-        <td class="ColumnStype" style="vertical-align:top;"><label class="Font">Remark</label></td>
-        <td colspan="2">
-            @Html.TextAreaFor(o => o.OthersRemark, new { @style = "width:calc(100% - 80px); border: 1px solid black;" })
+        <td class="ColumnStype ColunTD" style="vertical-align:top;"><label class="Font">Remark</label></td>
+        <td class="ContentText">
+            @Html.DisplayFor(o => o.FinalInspection.OthersRemark)
 
         </td>
     </tr>
 
-</table>*@
+</table>
