--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
@@ -59,10 +59,10 @@
         // name, td:value, td:checkbox
         adata.push([null, 'Fabric Artwork Check List',
             [
-                ['CheckCloseShade', 'Close / Shade',@Model.CheckCloseShade],
+                ['CheckCloseShade', 'Close/Shade',@Model.CheckCloseShade],
                 ['CheckHandfeel', 'Handfeel', @Model.CheckHandfeel],
                 ['CheckAppearance', 'Appearance',@Model.CheckAppearance],
-                ['CheckPrintEmbDecorations', 'Print / Emb Decorations', @Model.CheckPrintEmbDecorations]
+                ['CheckPrintEmbDecorations', 'Print/Emb Decorations', @Model.CheckPrintEmbDecorations]
             ]
         ]);
         adata.push([null, 'Label',
@@ -73,16 +73,16 @@
                 ['CheckAdicomLabel', 'Adicom Label', @Model.CheckAdicomLabel],
                 ['CheckCountryofOrigion', 'Country of Origion', @Model.CheckCountryofOrigion],
                 ['CheckSizeKey', 'Size Key', @Model.CheckSizeKey],
-                ['Check8FlagLabel', '8 - Flag Label', @Model.Check8FlagLabel],
+                ['Check8FlagLabel', '8-Flag Label', @Model.Check8FlagLabel],
                 ['CheckAdditionalLabel', 'Additional Label', @Model.CheckAdditionalLabel],
             ]
         ]);
-        adata.push([null, 'Fabric Artwork Check List',
+        adata.push([null, 'Packaging',
             [
                 ['CheckShippingMark', 'Shipping Mark', @Model.CheckShippingMark],
-                ['CheckHanCheckPolytagMarketingdfeel', 'Polytag / Marketing', @Model.CheckPolytagMarketing],
-                ['CheckColorSizeQty', 'Color / Size / Qty', @Model.CheckColorSizeQty],
-                ['CheckHangtag', 'Hangtag	W', @Model.CheckHangtag],
+                ['CheckPolytagMarketing', 'Polytag/Marketing', @Model.CheckPolytagMarketing],
+                ['CheckColorSizeQty', 'Color/Size/Qty', @Model.CheckColorSizeQty],
+                ['CheckHangtag', 'Hangtag', @Model.CheckHangtag],
             ]
         ]);
 
