--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -9,14 +9,14 @@
     <link href="~/ThirdParty/plugins/Tabs/nicepage.css" rel="stylesheet" />
     <script src="~/ThirdParty/plugins/Tabs/nicepage.js"></script>
     <style type="text/css">
-        @@media (min-width: 992px) and (max-width: 1199px){
-              .u-sheet{
-                  width: 740px;
-              }
-          }
+        @@media (min-width: 992px) and (max-width: 1199px) {
+            .u-sheet {
+                width: 740px;
+            }
+        }
     </style>
 }
-<div class="whiteBackgrond">
+<div class="whiteBackgrond" style="height:86vh">
     <div>
         <div>
             <h1>Inspection Report</h1>
@@ -39,71 +39,68 @@
         <div>
             <div>Inspection Detail</div>
             <div>
-                ----
                 <section class="u-align-center u-clearfix u-gradient u-section-1" id="carousel_2976">
                     <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
                         <div class="u-expanded-width u-tab-links-align-justify u-tabs u-tabs-1">
                             <ul id="tab_Head" class="u-border-2 u-border-palette-2-base u-spacing-10 u-tab-list u-unstyled" role="tablist">
                                 <li class="u-tab-item" role="presentation">
-                                    <a class="active u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-1" id="link-tab-1" href="#tab-1" role="tab" aria-controls="tab-0da5" aria-selected="true">Sample RFT</a>
+                                    <a class="active u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-1" id="link-tab-1" href="#tab-1" role="tab" aria-controls="tab-0da5" aria-selected="true">General</a>
                                 </li>
                                 <li class="u-tab-item" role="presentation">
-                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-2" id="link-tab-2" href="#tab-2" role="tab" aria-controls="tab-2917" aria-selected="false">Sample Testing</a>
+                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-2" id="link-tab-2" href="#tab-2" role="tab" aria-controls="tab-2917" aria-selected="false">Check List</a>
                                 </li>
                                 <li class="u-tab-item" role="presentation">
-                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-3" id="link-tab-3" href="#tab-3" role="tab" aria-controls="tab-2917" aria-selected="false">Sample Testing</a>
+                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-3" id="link-tab-3" href="#tab-3" role="tab" aria-controls="tab-2917" aria-selected="false">Defect</a>
                                 </li>
                                 <li class="u-tab-item" role="presentation">
-                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-4" id="link-tab-4" href="#tab-4" role="tab" aria-controls="tab-2917" aria-selected="false">Sample Testing</a>
+                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-4" id="link-tab-4" href="#tab-4" role="tab" aria-controls="tab-2917" aria-selected="false">Beautiful Product Audit</a>
                                 </li>
                                 <li class="u-tab-item" role="presentation">
-                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-5" id="link-tab-5" href="#tab-5" role="tab" aria-controls="tab-2917" aria-selected="false">Sample Testing</a>
+                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-5" id="link-tab-5" href="#tab-5" role="tab" aria-controls="tab-2917" aria-selected="false">Moisture</a>
                                 </li>
                                 <li class="u-tab-item" role="presentation">
-                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-6" id="link-tab-6" href="#tab-6" role="tab" aria-controls="tab-2917" aria-selected="false">Sample Testing</a>
+                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-6" id="link-tab-6" href="#tab-6" role="tab" aria-controls="tab-2917" aria-selected="false">Measurement</a>
                                 </li>
                                 <li class="u-tab-item" role="presentation">
-                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-7" id="link-tab-7" href="#tab-7" role="tab" aria-controls="tab-2917" aria-selected="false">Sample Testing</a>
+                                    <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-7" id="link-tab-7" href="#tab-7" role="tab" aria-controls="tab-2917" aria-selected="false">Others</a>
                                 </li>
                             </ul>
                             <div class="u-tab-content">
                                 <div class="u-container-style u-tab-active u-tab-pane u-white u-tab-pane-1" id="tab-1" role="tabpanel">
                                     <div class="u-container-layout u-valign-middle u-container-layout-1">
-                                        <div class="u-expanded-width u-table u-table-responsive u-table-1">
+                                        <div class="u-expanded-width u-table u-table-responsive u-table-1" style="margin:2em">
                                             @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml")
                                         </div>
                                     </div>
 
                                 </div>
                                 <div class="u-container-style u-tab-pane u-white u-tab-pane-2" id="tab-2" role="tabpanel">
-                                    <div class="u-container-layout u-valign-middle u-container-layout-2">
+                                    <div class="u-container-layout u-valign-middle u-container-layout-2" style="margin:2em">
                                         @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab2_Layout.cshtml")
                                     </div>
                                 </div>
                                 <div class="u-container-style u-tab-pane u-white u-tab-pane-3" id="tab-3" role="tabpanel">
-                                    <div class="u-container-layout u-valign-middle u-container-layout-3">
+                                    <div class="u-container-layout u-valign-middle u-container-layout-3" style="margin:2em">
                                         @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab3_Layout.cshtml")
                                     </div>
                                 </div>
                                 <div class="u-container-style u-tab-pane u-white u-tab-pane-4" id="tab-4" role="tabpanel">
-                                    <div class="u-container-layout u-valign-middle u-container-layout-4">
+                                    <div class="u-container-layout u-valign-middle u-container-layout-4" style="margin:2em">
                                         @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab4_Layout.cshtml")
                                     </div>
                                 </div>
                                 <div class="u-container-style u-tab-pane u-white u-tab-pane-5" id="tab-5" role="tabpanel">
-                                    <div class="u-container-layout u-valign-middle u-container-layout-5">
-                                        <div style="padding:2em">
-                                            @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab5_Layout.cshtml")
-                                        </div>
+                                    <div class="u-container-layout u-valign-middle u-container-layout-5" style="margin:2em">
+                                        @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab5_Layout.cshtml")
                                     </div>
                                 </div>
                                 <div class="u-container-style u-tab-pane u-white u-tab-pane-6" id="tab-6" role="tabpanel">
-                                    <div class="u-container-layout u-valign-middle u-container-layout-6">
+                                    <div class="u-container-layout u-valign-middle u-container-layout-6" style="margin:2em">
                                         @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab6_Layout.cshtml")
                                     </div>
                                 </div>
                                 <div class="u-container-style u-tab-pane u-white u-tab-pane-7" id="tab-7" role="tabpanel">
-                                    <div class="u-container-layout u-valign-middle u-container-layout-7">
+                                    <div class="u-container-layout u-valign-middle u-container-layout-7" style="margin:2em">
                                         @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab7_Layout.cshtml")
                                     </div>
                                 </div>
@@ -121,3 +118,22 @@
     </div>
 </div>
 
+@section FinalInspection_script
+{
+<script>
+    var msg = new MessagerAlert();
+
+    $(function () {
+        $('#myTable').DataTable({
+            "pageLength": 10,
+            "autoWidth": false,
+            "info": false,
+            "filter": false,
+            "paging": true,
+            "info": false,
+            "scrollY": "50vh",
+            "scrollCollapse": true
+        });
+    });
+</script>
+}
